sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:7: error: not found: value swapped
while (swapped) {
       ^AlgCocktailSort2:11: error: not found: value swapped
	swapped=true
        ^AlgCocktailSort2:18: error: not found: value swapped
	swapped=true
        ^