sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {

def debut = 0 
def fin = getNombreValeurs()

while (swapped) {
for (i <- debut to fin){
	if (plusPetit(i+1,i)) {
	echange(i,i+1)	
	swapped=true
	}
}

for (i <- fin to debut by -1){
	if (plusPetit(i+1,i)) {
	echange(i,i+1)	
	swapped=true
	}
}
}
}
